아 올라가라

--- a/src/main/resources/templates/modal/card-modal.html
+++ b/src/main/resources/templates/modal/card-modal.html
@@ -16,6 +16,7 @@
               <ul class="dropdown-menu">
                 <li><input class="form-control" type="text" id="tag" placeholder="#태그"></li>
                 <!-- TODO TAG 목록 추가 -->
+                <li>태그드롭다운</li>
               </ul>
             </div>
           </div>
